Actualizacion se crearon dos tablas

--- a/Telemetry/src/App.css
+++ b/Telemetry/src/App.css
@@ -1,7 +1,3 @@
 .App{
-    background-image: url("./Media/Img/BGbromteck.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: white;
+    background-color: #f8fafc;
 }
