--- a/Telemetry/src/page/DashOTT/DashOTT.scss
+++ b/Telemetry/src/page/DashOTT/DashOTT.scss
@@ -3,36 +3,30 @@
     flex-direction: row;
     align-items: stretch;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
     background-color: #f8fafc;
     justify-content: center;
     color: black;
     box-sizing: border-box;
+    overflow-y: auto;
 
     .containerGeneral{
         width: 90%;
-        border: #999898 1px solid;
-        box-shadow: 0px 2px 12px 9px #9b8d8d;
-        border-radius: 10px;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        -ms-border-radius: 10px;
-        -o-border-radius: 10px;
+        height: 100%;
         margin: 25px;
-
 
         .containerGeneralForms{
             width: 100%;
-            height: 12vh;
+            height: 15%;
             display: flex;
             justify-content: center;
             align-items: center;
-            border-radius: 2px;
-            border: 1px black solid;
-            background-color: #f1e7d8;
-
+            border-radius: 15px 15px 15px 15px;
+            -webkit-border-radius: 15px 15px 15px 15px;
+            -moz-border-radius: 15px 15px 15px 15px;
+            border: 1px solid;
 
             .containerForm{
                 display: flex;
@@ -67,13 +61,17 @@
                 }
             }
         }
+
         .containerGeneralTable{
             display: flex;
-            flex-direction: row;
-            justify-content: space-around;
+            flex-direction: column;
+            justify-content: space-evenly;
             width: 100%;
             background-color: #fdfdfd;
-            border: 1px solid black;
+            flex-wrap: nowrap;
+            align-items: center;
+            margin-top: 40px;
+
             .containerTableType{
                 width: 50%;
                 .containerTittle{
@@ -87,31 +85,42 @@
                             width: 100%;
                             text-align: center;
                         }
-                    }
-                    .containerTableTBody{
-                        height: 440px;
-                        width: 100%;
-                        .containerTableTh{
-                            text-align: center;
+                        .containerTableTBody{
+                            height: 440px;
+                            width: 100%;
+                            .containerTableTh{
+                                text-align: center;
+                            }
                         }
                     }
                 }
-
             }
         }
-        .TableTimeZone{
+
+        .Leyendas{
+            margin: 0px;
+            padding: 0px;
             width: 100%;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .TableTimeZone{
             .tableTypeTimeZone{
-                height: 440px;
+                height: auto;
+                width: 40%;
                 .tableTimeZone{
                     height: 80px;
                     display: flex;
                     flex-direction: row;
                     flex-wrap: nowrap;
+                    border-radius: 15px;
                     border: black solid 1px;
                     .TableTheadTimeZone{
                         height: 80px;
-                        width: 150px;
+                        width: 20%;
                         .TableTrTimeZone{
                             display: flex;
                             flex-direction: column;
@@ -126,6 +135,7 @@
                         align-items: center;
                         justify-content: space-around;
                         height: 80px;
+                        width: 80%;
                         .tableTrTimeZone{
                             display: flex;
                             flex-direction: column;
@@ -139,15 +149,7 @@
                 }
             }
         }
-        .TableOTT{
 
-        }
-        .containerGraphType{
-            width: 50%;
-            .containerTittle{
-                text-align: center;
-            }
-        }
+
     }
-    
 }
