--- a/Telemetry/src/page/DashOTT/DashOTT.scss
+++ b/Telemetry/src/page/DashOTT/DashOTT.scss
@@ -85,12 +85,12 @@
                             width: 100%;
                             text-align: center;
                         }
-                        .containerTableTBody{
-                            height: 440px;
-                            width: 100%;
-                            .containerTableTh{
-                                text-align: center;
-                            }
+                    }
+                    .containerTableTBody{
+                        height: 440px;
+                        width: 100%;
+                        .containerTableTr{
+                            text-align: center;
                         }
                     }
                 }
@@ -147,6 +147,22 @@
                         }
                     }
                 }
+            }
+        }
+
+        .TableOTT{
+            flex-direction: row;
+            justify-content: center;
+            .tableTypeOTT{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                flex-wrap: nowrap;
+            }
+            .graficaOTT{
+                width: 50%;
+                text-align: center;
             }
         }
 
