--- a/Telemetry/src/page/DashOTT/DashOTT.scss
+++ b/Telemetry/src/page/DashOTT/DashOTT.scss
@@ -1,39 +1,50 @@
-.containerGeneralInformation{
+.containerGlobal{
     display: flex;
-    flex-direction: row;
-    align-items: stretch;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
     width: 100%;
     height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-color: #f8fafc;
-    justify-content: center;
-    color: black;
-    box-sizing: border-box;
-    overflow-y: auto;
-
-    .containerGeneral{
-        width: 90%;
-        height: 100%;
-        margin: 25px;
-
-        .containerGeneralForms{
-            width: 100%;
-            height: 15%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 15px 15px 15px 15px;
-            -webkit-border-radius: 15px 15px 15px 15px;
-            -moz-border-radius: 15px 15px 15px 15px;
-            border: 1px solid;
+    .containerNav{
+        width: 95%;
+    }
+    
+    .containerGeneralInformation{
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        width: 100%;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        background-color: #f8fafc;
+        justify-content: center;
+        color: black;
+        box-sizing: border-box;
+        overflow-y: auto;
+        
+        .containerGeneral{
+            width: 90%;
+            height: 100%;
+            margin: 25px;
+            
+            .containerGeneralForms{
+                width: 100%;
+                height: 15%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 15px 15px 15px 15px;
+                -webkit-border-radius: 15px 15px 15px 15px;
+                -moz-border-radius: 15px 15px 15px 15px;
+                border: 1px solid;
 
             .containerForm{
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
                 width: 100%;
-
+                
                 .containerInput{
                     display: flex;
                     flex-direction: column;
@@ -71,7 +82,7 @@
             flex-wrap: nowrap;
             align-items: center;
             margin-top: 40px;
-
+            
             .containerTableType{
                 width: 50%;
                 .containerTittle{
@@ -96,7 +107,6 @@
                 }
             }
         }
-
         .Leyendas{
             margin: 0px;
             padding: 0px;
@@ -106,66 +116,63 @@
             align-items: center;
             justify-content: center;
         }
-
-        .TableTimeZone{
-            .tableTypeTimeZone{
-                height: auto;
-                width: 40%;
-                .tableTimeZone{
-                    height: 80px;
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: nowrap;
-                    border-radius: 15px;
-                    border: black solid 1px;
-                    .TableTheadTimeZone{
+            .TableTimeZone{
+                .tableTypeTimeZone{
+                    height: auto;
+                    width: 40%;
+                    .tableTimeZone{
                         height: 80px;
-                        width: 20%;
-                        .TableTrTimeZone{
-                            display: flex;
-                            flex-direction: column;
-                            align-items: center;
-                            height: 100%;
-                            justify-content: space-around;
-                        }
-                    }
-                    .tableTBodyTimeZone{
                         display: flex;
                         flex-direction: row;
-                        align-items: center;
-                        justify-content: space-around;
-                        height: 80px;
-                        width: 80%;
-                        .tableTrTimeZone{
+                        flex-wrap: nowrap;
+                        border-radius: 15px;
+                        border: black solid 1px;
+                        .TableTheadTimeZone{
+                            height: 80px;
+                            width: 20%;
+                            .TableTrTimeZone{
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
+                                height: 100%;
+                                justify-content: space-around;
+                            }
+                        }
+                        .tableTBodyTimeZone{
                             display: flex;
-                            flex-direction: column;
+                            flex-direction: row;
+                            align-items: center;
                             justify-content: space-around;
                             height: 80px;
-                            margin-left: 10px;
-                            margin-right: 10px;
-                            align-items: center;
+                            width: 80%;
+                            .tableTrTimeZone{
+                                display: flex;
+                                flex-direction: column;
+                                justify-content: space-around;
+                                height: 80px;
+                                margin-left: 10px;
+                                margin-right: 10px;
+                                align-items: center;
+                            }
                         }
                     }
                 }
             }
-        }
-
-        .TableOTT{
-            flex-direction: row;
-            justify-content: center;
-            .tableTypeOTT{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
+            .TableOTT{
+                flex-direction: row;
                 justify-content: center;
-                flex-wrap: nowrap;
-            }
-            .graficaOTT{
-                width: 50%;
-                text-align: center;
+                .tableTypeOTT{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    flex-wrap: nowrap;
+                }
+                .graficaOTT{
+                    width: 50%;
+                    text-align: center;
+                }
             }
         }
-
-
     }
 }
